--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+<DOCTYPE html>
+    <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Exemplo</title>
+        <title>CCM Antonio José Reis</title>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <!-- JavaScript Bundle with Popper -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
 
 
     </head>
+
     <body>
-<header>
-    <h1>aqui vai ser ma imagem</h1>
-   <img class="imagem-logo" src="imagem1.png" alt="Sociedade Esportiva Palmeiras">
-   <ul>
-        <li>AA</li>
-        <li>AA</li>
-    </ul>
-    
 
+        <header class="bg-ligth header">
+            <section>
+                <span class="span-1">CCM</span>
+                <span class="span-2">Antonio José Reis</span>
+                <section class="links">
+                    <a href="">Inicio</a>
+                    <a href="">Contatos</a>
+                    <a href="">Rede Sociais</a>
+                    <a href="">Sobre</a>
+                </section>
 
-</header>
+        </header>
     </body>
-</html>
+
+    </html>
