--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                 </section>
 
         </header>
+        <main> 
+            <section class="secao-1">
+                <h3> Olá</h3>
+                <h1> Bem Vindos</h1>
+                <h1> Ao site do colegio CCM Antonio José Reis</h1>
+                <p> aqui voçê estara informado de todas as noticias do colegio e ver dados variados da escola</p>
+            </section>
+        </main>
     </body>
 
     </html>
