--- a/redes sociais.html
+++ b/redes sociais.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Militares</title>
+        <title>Redes Sociais</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -22,12 +22,12 @@
                 <span class="span-2">Antonio José Reis</span>
                 <section class="links">
                     <a href="inicio.html">Inicio</a>
-                    <a href="direção.html">Direção</a>
-                   <a href="militares.html">Militares</a>
-                   <a href="professores.html">Professores</a>
-                   <a href="alunos.html">Alunos</a>
-                   <a href="grêmio.html">Grêmio Estudantil</a>
-                   <a href="redes sociais.html">Redes Socias</a>
+                     <a href="direção.html">Direção</a>
+                    <a href="militares.html">Militares</a>
+                    <a href="professores.html">Professores</a>
+                    <a href="alunos.html">Alunos</a>
+                    <a href="grêmio.html">Grêmio Estudantil</a>
+                    <a href="redes sociais.html">Redes Socias</a>
 
                 </section>
 
