--- a/Vscode-main/professores.html
+++ b/Vscode-main/professores.html
@@ -31,12 +31,33 @@
                 </section>
 
         </header>
+        <main>
+
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <section class="secao-1">
+                            <h3> Professores </h3>
+                            <h1> Os melhores professores de Toledo</h1>
+                            <h1> </h1>
+                            <p> aqui você encontrará todas as informaçoẽs de seus professores e suas matérias</p>
+                        </section>
+                    </div>
+                    <div class="col">
+                        <section class="secao-5">
+                            <div class="professores">
+                                <img src="professores.jpeg" alt=""></img>
+                        </section>
+                    </div>
+
+                </div>
+            </div>
 
 
         </main>
     </body>
 
     </html>
-            <div class="container text-center">
-                <div class="row">
-                    <div cl
+
+
+      
