--- a/Vscode-main/grêmio.html
+++ b/Vscode-main/grêmio.html
@@ -38,7 +38,7 @@
                     <div class="col">
                         <section class="secao-1">
                             <h3> Ofea</h3>
-                            <h1> Organizamos os eventos das escola </h1>
+                            <h1> Organizamos os eventos da escola </h1>
                             <h1> Somos a voz dos alunos</h1>
                             <p> Aqui voçê estara informado de todas as noticias do colegio e ver dados variados da
                                 escola</p>
@@ -48,14 +48,54 @@
                         <section class="secao-3">
                             <div class="ofea">
                                 <img src="ofea.jpeg" alt=""></img>
+
+
                         </section>
                     </div>
-
                 </div>
             </div>
 
 
         </main>
+        <section class="section section-1"></section>
+        <section class="section section-2">
+            <h1>Festa Julina</h1>
+
+        </section>
+        <section class="section section-3"></section>
+        <section class="section section-4"></section>
+        <section class="section section-5"></section>
+        <section class="section section-6"></section>
+        <section class="section section-7"></section>
+        <section class="section section-8"></section>
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <section class="secao-10">
+                        <script language="JavaScript">
+                            document.write("<font color='#000000' size='5' face='Helvética'>")
+                            var mydate = new Date()
+                            var year = mydate.getYear()
+                            if (year < 2000)
+                                year += (year < 1900) ? 1900 : 0
+                            var day = mydate.getDay()
+                            var month = mydate.getMonth()
+                            var daym = mydate.getDate()
+                            if (daym < 10)
+                                daym = "0" + daym
+                            var dayarray = new Array("Domingo", "Segunda-feira", "Terça-feira", "Quarta-feira", "Quinta-feira", "Sexta-feira", "Sábado")
+                            var montharray = new Array(" de Janeiro de ", " de Fevereiro de ", " de Março de ", "de Abril de ", "de Maio de ", "de Junho de", "de Julho de ", "de Agosto de ", "de Setembro de ", " de Outubro de ", " de Novembro de ", " de Dezembro de ")
+                            document.write("   " + dayarray[day] + ", " + daym + " " + montharray[month] + year + " ")
+                            document.write("</b></i></font>")
+                        </script>
+                        </script>
+                    </section>
+                </div>
+            </div>
+        </div>
+
+
     </body>
 
     </html>
