--- a/Vscode-main/redes sociais.html
+++ b/Vscode-main/redes sociais.html
@@ -32,3 +32,41 @@
                 </section>
 
         </header>
+        <section class="section section-1"></section>
+        <section class="section section-2"></section>
+        <section class="section section-3"></section>
+        <section class="section section-4"></section>
+        <section class="section section-5"></section>
+        <section class="section section-6"></section>
+        <section class="section section-7"></section>
+        <section class="section section-8"></section>
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <section class="secao-10">
+        <script language="JavaScript">
+            document.write("<font color='#000000' size='5' face='Helvética'>")
+            var mydate=new Date()
+            var year=mydate.getYear()
+            if (year<2000)
+            year += (year < 1900) ? 1900 : 0
+            var day=mydate.getDay()
+            var month=mydate.getMonth()
+            var daym=mydate.getDate()
+            if (daym<10)
+            daym="0"+daym
+            var dayarray=new Array("Domingo","Segunda-feira","Terça-feira","Quarta-feira","Quinta-feira","Sexta-feira","Sábado")
+            var montharray=new Array(" de Janeiro de "," de Fevereiro de "," de Março de ","de Abril de ","de Maio de ","de Junho de","de Julho de ","de Agosto de ","de Setembro de "," de Outubro de "," de Novembro de "," de Dezembro de ")
+            document.write("   "+dayarray[day]+", "+daym+" "+montharray[month]+year+" ")
+            document.write("</b></i></font>")
+            </script>
+                 </script>
+                </section>
+            </div>
+        </div>
+    </div>
+                 
+        
+    </body>
+    </html>
