--- a/Vscode-main/direção.html
+++ b/Vscode-main/direção.html
@@ -31,6 +31,45 @@
                 </section>
 
         </header>
+
+        <main>
+
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <section class="secao-6">
+                            <h1> Bem Vindo </h1>
+                            <h1> A direção do colegio</h1>
+                            <p> Aqui voçê encontra nossa direção do colegio </p>
+                    </div>
+                </div>
+            </div>
+
+            <section class="secao-7">
+                <h3>Diretora</h3>
+            </section>
+
+            <section class="secao-8">
+                <div class="img">
+                    <img src="diretora.jpg" alt=""></img>
+                </div>
+
+                <section class="secao-9">
+                    <h3> Viçe Diretora</h3>
+                </section>
+
+                <section class="secao-10">
+                    <div class="img">
+                        <img src="diretora.jpg" alt=""></img> 
+                </section>
+
+
+                </div>
+
+
+
+
+        </main>
         <section class="section section-1"></section>
         <section class="section section-2"></section>
         <section class="section section-3"></section>
@@ -39,6 +78,7 @@
         <section class="section section-6"></section>
         <section class="section section-7"></section>
         <section class="section section-8"></section>
+
 
         <div class="container text-center">
             <div class="row">
