--- a/Vscode-main/inicio.html
+++ b/Vscode-main/inicio.html
@@ -54,6 +54,11 @@
                             <div class="img">
                                 <img src="ceajor.jpg" alt=""></img>
                         </section>
+                    </section>
+                 
+                    </section>
+                   
+            </section>
                     </div>
 
                 </div>
