--- a/Vscode-main/direção.html
+++ b/Vscode-main/direção.html
@@ -49,17 +49,13 @@
                 <div class="row">
                     <div class="col">
             <section class="secao-7">
-                <h3>Diretora</h3>
+                <h3>Diretora:
+                  Cleonice de Andrade
+                </h3>
             </section>
         </div>
     </div>
 
-            <section class="secao-12">
-                <h3> Nome: Cleonice De Andrade </h3> 
-            
-                
-                <p> Diretora do Colegio CCM Antonio José Reis </p>
-            </section>
 
             <div class="row">
                 <div class="col">
@@ -69,17 +65,21 @@
                 </div>
             </div>
         </div>
-
+        <div class="row">
+                 <div class="col">
                 <section class="secao-9">
-                    <h3> Viçe Diretora</h3>
+                    <div class="vice">
+                    <h3> Vice Diretora: Maria Dias</h3>
                 </section>
+            </div>
 
-                <section class="secao-11">
-                    <div class="img">
+                <section class="sec">
+                    <div class="imgvice">
                         <img src="diretora.jpg" alt=""></img>
                 </section>
 
-
+            </div>
+        </div>
                 </div>
 
 
